--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.datasource.url=jdbc:mysql://springboot-db.cxk1e3hs2umk.ap-northeast-2.rds.amazonaws.com:3306/myselectshop
+spring.datasource.username=rlatmd0829
+spring.datasource.password=ekfk167167!
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
